swagger documentation completed
